# AIReplacementandskilldataset_predictionModel

./: README.md  main.py  pyproject.toml
data/raw/: AIREPLACEMENT.csv
developyment/: streamlit_app.py
research/: EDA.ipynb
